--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Griffen Devino</h1>
+<img src="PXL_20240702_231758346.jpg" alt="Griffen Devino Portrait" width="500" height="500">
+<p>Portfolio</p>
+<p><a href = "https://github.com/TheGriD02/28-Bit-Processor">28-bit Instruction Set Architecture and Processor using Verilog</a><br>
+</br><a href = "https://github.com/bradwj/onemoment">OneMoment Short Form Video Upload Website</a><br>
+</br><a href = "https://github.com/yusuf-wadi/AIxhibit">AI Art Exhibit</a></p>
 </body>
 </html>
