--- a/index.html
+++ b/index.html
@@ -1,11 +1,45 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Griffen Devino</h1>
-<img src="PXL_20240702_231758346.jpg" alt="Griffen Devino Portrait" width="500" height="900">
-<p>Portfolio</p>
+<h1>Griffen Devino <font size="3"> <div>
+Cloud Specialist </font></h1></div>
+<img  border="5" src="PXL_20240702_231758346.jpg" alt="Griffen Devino Portrait" width="500" height="850" align ="right">
+<div>
+<p style="font-size:20px"> Portfolio</p>
 <p><a href = "https://github.com/TheGriD02/28-Bit-Processor">28-bit Instruction Set Architecture and Processor using Verilog</a><br>
+<ul>
+	<li> Designed and wrote a 28-bit instruction set architecture and processor using Verilog </li>
+	<li> Implemented two-phase instruction grab to comply with project requirements </li>
+</ul>
 </br><a href = "https://github.com/bradwj/onemoment">OneMoment Short Form Video Upload Website</a><br>
-</br><a href = "https://github.com/yusuf-wadi/AIxhibit">AI Art Exhibit</a></p>
+<ul>
+	<li> Created a short form video upload website utilizing S3 buckets </li>
+	<li> Developed a signup page and registration system to track users </li>
+</ul>
+</br><a href = "https://github.com/yusuf-wadi/AIxhibit">AI Art Exhibit</a><br>
+<ul>
+	<li> Designed SQL database schema</li>
+	<li> Configured and deployed MySQL database </li>
+	<li> Developed PHP database linkage code to web page for CRUD</li>
+</ul>
+</br>Low-Cost ESM FPGA Radar Signal Processor <div>
+<font size="2">
+Sponsored by Sierra Nevada Corporation
+</font></div>
+<ul>
+	<li> Designed & programmed an FPGA radar signal processor</li>
+	<li> Developed code for interfacing with the FPGA device </li>
+	<li> Currently under government review</li>
+</ul></br>
+<a href = "https://pubmed.ncbi.nlm.nih.gov/35475584/">Twistron II Carbon Nanotube Energy Harvester</a> <div>
+<font size="2">Sponsored by University of Texas at Dallas</font> </div>
+<ul>
+	<li> Prepped carbon nanotube twist samples for plying </li>
+	<li> Measured and reported electrical characteristics of carbon nanotube twists </li>
+	<li> Performed electrical characteristic analysis of samples for energy harvesting </li>
+</ul>
+</br>
+</p>
+</div>
 </body>
 </html>
