--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Griffen Devino <font size="3"> <div>
+<h1>Griffen Devino <img  border="5" src="PXL_20240702_231758346.jpg" alt="Griffen Devino Portrait" width="500" height="850" align ="right">
+<font size="3"> <div>
 Cloud Specialist </font></h1></div>
-<img  border="5" src="PXL_20240702_231758346.jpg" alt="Griffen Devino Portrait" width="500" height="850" align ="right">
 <div>
 <p style="font-size:20px"> Portfolio</p>
 <p><a href = "https://github.com/TheGriD02/28-Bit-Processor">28-bit Instruction Set Architecture and Processor using Verilog</a><br>
