--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body>
+<body style="background-color:lightgray">
 <h1>Griffen Devino <img  border="5" src="PXL_20240702_231758346.jpg" alt="Griffen Devino Portrait" width="500" height="850" align ="right">
 <font size="3"> <div>
 Cloud Specialist </font></h1></div>
