--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <font size="3"> <div>
 Cloud Specialist </font></h1></div>
 <div>
-<p style="font-size:20px"> Portfolio</p>
+<p style="font-size:20px"><strong> Portfolio </strong></p>
 <p><a href = "https://github.com/TheGriD02/28-Bit-Processor">28-bit Instruction Set Architecture and Processor using Verilog</a><br>
 <ul>
 	<li> Designed and wrote a 28-bit instruction set architecture and processor using Verilog </li>
