--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <body style="background-color:lightgray">
-<h1>Griffen Devino <img  border="5" src="PXL_20240702_231758346.jpg" alt="Griffen Devino Portrait" width="500" height="850" align ="right">
+<h1>Griffen Devino <img  style="border-width:5px; border-color:#000000; border-radius:15px" border="1" src="PXL_20240702_231758346.jpg" alt="Griffen Devino Portrait" width="500" height="850" align ="right">
 <font size="3"> <div>
 Cloud Specialist </font></h1></div>
 <div>
 <p style="font-size:20px"><strong> Portfolio </strong></p>
-<p><a href = "https://github.com/TheGriD02/28-Bit-Processor">28-bit Instruction Set Architecture and Processor using Verilog</a><br>
+<div><a href = "https://github.com/TheGriD02/28-Bit-Processor">28-bit Instruction Set Architecture and Processor using Verilog</a><br>
 <ul>
 	<li> Designed and wrote a 28-bit instruction set architecture and processor using Verilog </li>
 	<li> Implemented two-phase instruction grab to comply with project requirements </li>
@@ -26,7 +26,7 @@ Cloud Specialist </font></h1></div>
 <font size="2">
 Sponsored by Sierra Nevada Corporation
 </font></div>
-<ul>
+<ul size="3">
 	<li> Designed & programmed an FPGA radar signal processor</li>
 	<li> Developed code for interfacing with the FPGA device </li>
 	<li> Currently under government review</li>
@@ -39,7 +39,7 @@ Sponsored by Sierra Nevada Corporation
 	<li> Performed electrical characteristic analysis of samples for energy harvesting </li>
 </ul>
 </br>
-</p>
+</div>
 </div>
 </body>
 </html>
